Revert "change-dish-state"
This reverts commit 685fca0f751e055667650519e0f10ca7454c1a89.